# Blackjack

./: Cargo.toml  README.md
blackjack-cli/: Cargo.toml
blackjack-cli/src/: app.rs  cli.rs  main.rs
blackjack-core/: Cargo.toml
blackjack-core/src/: basic_strategy.rs  blackjack.rs  card.rs  game.rs  lib.rs  rules.rs  state.rs  statistics.rs  table.rs
blackjack-core/src/card/: deck.rs
blackjack-gui/: Cargo.toml
blackjack-gui/src/: app.rs  game.rs  input.rs  main.rs  ui.rs
src/: card.rs  game.rs  input.rs  io.rs  main.rs  statistics.rs
src/input/: basic.rs  cli.rs  io.rs
