[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"
description = "A simple Blackjack game written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rand = "0.8.5"
